--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>My Dev Portfolio</title>
+    <title>Developer MI-NE</title>
     <meta
       name="description"
       content="Developer portfolio template made with HTML, CSS, Javascript and Bootstrap4."
@@ -48,7 +48,7 @@
           <img
             class="img-fluid img-profile rounded-circle mx-auto mb-2"
             id="profileImg"
-            src="img/default-profile.png"
+            src="https://avatars0.githubusercontent.com/u/49668613?s=400&u=4b5293f0f71adf8ab0ac719bcc086d7a6f7f302d&v=4"
           />
         </span>
       </a>
@@ -82,7 +82,7 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#bio">Bio</a>
+            <a class="nav-link js-scroll-trigger" href="#bio">Ideology</a>
           </li>
         </ul>
       </div>
@@ -107,12 +107,12 @@
           </p>
           <div class="social-icons">
             <a
-              id="linkedin"
+              id="tstory"
               target="_blank"
               rel="noopener noreferrer"
               class="nightsky-social"
             >
-              <i class="fab fa-linkedin-in"></i>
+              <i class="fab fa-blogger"></i>
             </a>
             <a
               id="github"
@@ -123,20 +123,12 @@
               <i class="fab fa-github"></i>
             </a>
             <a
-              id="twitter"
+              id="naver"
               target="_blank"
               rel="noopener noreferrer"
               class="nightsky-social"
             >
-              <i class="fab fa-twitter"></i>
-            </a>
-            <a
-              id="stackoverflow"
-              target="_blank"
-              rel="noopener noreferrer"
-              class="nightsky-social"
-            >
-              <i class="fab fa-stack-overflow"></i>
+              <i class="fab fa-google"></i>
             </a>
             <a
               id="dev"
@@ -206,7 +198,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="bio">
         <div class="my-auto">
-          <h2 class="mb-5">Biography</h2>
+          <h2 class="mb-5">Ideology</h2>
           <p id="bio-text"></p>
         </div>
       </section>
