--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
             <a class="nav-link js-scroll-trigger" href="#skills">Skills</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link js-scroll-trigger" href="#bio">Ideology</a>
+            <a class="nav-link js-scroll-trigger" href="#bio">History</a>
           </li>
         </ul>
       </div>
@@ -198,7 +198,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex flex-column" id="bio">
         <div class="my-auto">
-          <h2 class="mb-5">Ideology</h2>
+          <h2 class="mb-5">History</h2>
           <p id="bio-text"></p>
         </div>
       </section>
