--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta http-equiv="X-UA-Compatible" content="ie=edge" />
-    <title>My Dev Portfolio</title>
+    <title>My Portfolio</title>
     <meta
       name="description"
       content="Developer portfolio template made with HTML, CSS, Javascript and Bootstrap4."
@@ -111,6 +111,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="nightsky-social"
+              style="display: none"
             >
               <i class="fab fa-linkedin-in"></i>
             </a>
@@ -119,6 +120,7 @@
               target="_blank"
               rel="noopener noreferrer"
               class="nightsky-social"
+              style="display: none"
             >
               <i class="fab fa-github"></i>
             </a>
@@ -135,8 +137,18 @@
               target="_blank"
               rel="noopener noreferrer"
               class="nightsky-social"
+              style="display: none"
             >
               <i class="fab fa-stack-overflow"></i>
+            </a>
+            <a
+              id="instargram"
+              target="_blank"
+              href="https://www.instagram.com/ys_ang_stagram"
+              rel="noopener noreferrer"
+              class="nightsky-social"
+            >
+              <i class="fab fa-instagram"></i>
             </a>
             <a
               id="dev"
@@ -144,7 +156,7 @@
               rel="noopener noreferrer"
               class="nightsky-social"
             >
-              <i class="fab fa-dev"></i>
+              <i class="fa fa-sticky-note" aria-hidden="true"></i>
             </a>
           </div>
         </div>
